--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top marca">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" class="img-fluid">
+                <h2 class="marca">Turismo Araucanía</h2>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,13 +34,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#nosotros">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#viajes">Viajes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contactar">Contacto</a>
                     </li>
 
                 </ul>
@@ -68,11 +68,10 @@
         </div>
     </header>
 
-
+<div id="nosotros" class="margen__nosotros"></div>
     <section id="Acerca-de-mi" class="container text-center my-5">
 
-
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2  class="display-3 fw-bold my-4">Nosotros</h2>
 
         <p class="my-4">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
@@ -114,10 +113,10 @@
         </div>
     </section>
 
-
+<div id="viajes" class="margen__nosotros"></div>
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Viajes</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -176,10 +175,9 @@
     </section>
 
 
-
     <section id="Contacto" class="container my-5">
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <h2 id="contactar" class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
         <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Doloribus
