Cambios de imágenes, Descripción en Nosotros y en Información de viajes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/lead73a4b9.js" crossorigin="anonymous"></script>
-    <title>Olivia Ros</title>
+    <title>Turismo Araucanía</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -53,17 +53,8 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Conoce las Maravillas de la Araucanía
                 </h1>
-                <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
-                </p>
-                <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
-                </div>
             </div>
         </div>
     </header>
@@ -73,41 +64,36 @@
 
         <h2  class="display-3 fw-bold my-4">Nosotros</h2>
 
-        <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+        <p class="my-5">
+            En Turismo Araucanía queremos fomentar el turísmo de la Región, difundiendo 
+            sus atractivos turísticos, patrimoniales y comerciales. Pretendemos generar 
+            comunidad y asociatividad entre los distintos actores relacionados al turismo 
+            de la zona. Nuestro objetivo es mostrar la experiencia de vivir y descubrir 
+            cada rincón de la Araucanía, potenciarla como una zona inteligente y junto a esto, 
+            ser el principal referente del turismo en la Araucanía.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Fotografiamos tus experiencias</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Proporcionamos a través de tecnología de ultima generación, capturas y videos de tus experiencias para guardar todos los recuerdos de esta hermosa experiencia.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Compañia y Guía Turística Integral</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Te acompañamos en todo tu recorrido, Proporcionando experiencias, Información Esencial y Guía completa en tu Tour por la Araucanía.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Material Completo de Lugares y recorridos</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Proporcionamos Excelente material de los lugares, puntos y recorridos de cada lugar o zona que recorras o conozcas. Nuestra App Proporciona todas las herramientas y funcionalidades para fascilitar y hacer de tu viaje una experiencia única.
                 </p>
             </div>
         </div>
@@ -121,14 +107,11 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/araucania-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Zona Lacustre</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Destino de lagos, termas, volcanes, centros de ski y parques nacionales. Aquí se pueden realizar actividades en un entorno de naturaleza inolvidable, rodeado de especies nativas como la icónica araucaria. Se recomiendan destinos clave como las turísticas ciudades de Villarrica, Pucón, Caburgua y Licán Ray, los parques nacionales Huerquehue, Conguillío, Tolhuaca y Villarrica, además de termas, ríos, volcanes, cuevas volcánicas y los lagos Villarrica, Calafquén y Caburgua, conocidos por ser lugares para practicar surf, kayak, deportes náuticos y aeronáuticos en general, entre muchas otras opciones a considerar.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -138,14 +121,13 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/araucania-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Volcanes Cordilleranos</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            La Araucanía es una de las regiones en Chile que cuenta con una considerable presencia volcánica. Si bien existe un conglomerado de 8 estratos volcanes de grandes proporciones, también existe una diversa concentración de otras formaciones volcánicas no tradicionales, correspondiente a Cráteres Adventicios o parásitos, Conos de Piroclástos, Fisuras, Calderas Volcánicas y pequeños conglomerados.
+
+                            Los volcanes de la Araucanía podemos agruparlos por zonas geológicas que están representadas por Complejos Volcánicos o áreas volcánicas asociadas a los grandes edificios volcánicos de la región.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -155,14 +137,13 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/araucania-5.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Turísmo Culinario</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            La importancia del Turísmo gastranómico en la región, es clave para conocer nuestra zona. 
+                            
+                            La gastronomía constituye una parte esencial de la experiencia turística, ya que forma parte del contexto social y cultural de los territorios y recrea las complejas relaciones históricas, sociales y productivas que han determinado un tipo de alimentación en un contexto particular. Los pueblos indígenas tienen potencial natural para el desarrollo del turismo especializado como el gastronómico, ya que poseen una amplia gama de recursos originales de su patrimonio natural y cultural, como es el caso de los mapuches en la región de La Araucanía
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -177,13 +158,7 @@
 
     <section id="Contacto" class="container my-5">
 
-        <h2 id="contactar" class="display-4 fw-bold text-center my-4">Contáctame</h2>
-
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <h2 id="contactar" class="display-4 fw-bold text-center my-4">Contáctanos</h2>
 
         <form>
 
@@ -217,7 +192,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Turismo Araucanía 2022. Todos los derechos reservados.</p>
     </footer>
 
 
