Se crean clases en html y se realizan cambios en estilos y tamaños de fuentes en css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
+                <h1 class="display-1 fw-bold my-5 marca color_fuente">
                     Conoce las Maravillas de la Araucanía
                 </h1>
             </div>
@@ -62,7 +62,7 @@
 <div id="nosotros" class="margen__nosotros"></div>
     <section id="Acerca-de-mi" class="container text-center my-5">
 
-        <h2  class="display-3 fw-bold my-4">Nosotros</h2>
+        <h2  class="display-3 fw-bold my-4 marca">Nosotros</h2>
 
         <p class="my-5">
             En Turismo Araucanía queremos fomentar el turísmo de la Región, difundiendo 
@@ -102,7 +102,7 @@
 <div id="viajes" class="margen__nosotros"></div>
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Viajes</h2>
+        <h2 class="display-4 fw-bold text-center text-light text-black mb-3 marca">Viajes</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -156,9 +156,9 @@
     </section>
 
 
-    <section id="Contacto" class="container my-5">
+    <section id="Contacto" class="container my-4">
 
-        <h2 id="contactar" class="display-4 fw-bold text-center my-4">Contáctanos</h2>
+        <h2 id="contactar" class="display-4 fw-bold text-center my-4 marca">Contáctanos</h2>
 
         <form>
 
