Mejorar estilo de fuentes, colores de fondo en sección viajes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top marca">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <h2 class="marca">Turismo Araucanía</h2>
+                <h2 class="marca diseño_titulo">Turismo Araucanía</h2>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
 <div id="nosotros" class="margen__nosotros"></div>
     <section id="Acerca-de-mi" class="container text-center my-5">
 
-        <h2  class="display-3 fw-bold my-4 marca">Nosotros</h2>
+        <h2  class="display-3 fw-bold my-4 marca diseño_fuente">Nosotros</h2>
 
         <p class="my-5">
             En Turismo Araucanía queremos fomentar el turísmo de la Región, difundiendo 
@@ -100,9 +100,9 @@
     </section>
 
 <div id="viajes" class="margen__nosotros"></div>
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 color_fondo">
 
-        <h2 class="display-4 fw-bold text-center text-light text-black mb-3 marca">Viajes</h2>
+        <h2 class="display-4 fw-bold text-center text-light text-black mb-3 marca diseño_fuente">Viajes</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
@@ -158,7 +158,7 @@
 
     <section id="Contacto" class="container my-4">
 
-        <h2 id="contactar" class="display-4 fw-bold text-center my-4 marca">Contáctanos</h2>
+        <h2 id="contactar" class="display-4 fw-bold text-center my-4 marca diseño_fuente">Contáctanos</h2>
 
         <form>
 
