--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top marca">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <h2 class="marca diseño_titulo">Turismo Araucanía</h2>
+                <h2 class="marca diseño_titulo">Turismo Araucania</h2>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,6 @@
             cada rincón de la Araucanía, potenciarla como una zona inteligente y junto a esto, 
             ser el principal referente del turismo en la Araucanía.
         </p>
-
 
         <div class="row">
             <div class="col-12 col-md-4">
